# hello_world_cpp

./: CMakeLists.txt  README.md
src/: test.cpp  testcpp1
